IDEMPIERE-3798:Move iDempiere default branch to openjdk 10 (hazelcast)
hazelcase warning